src/test/deca/syntax/valid/or.deca
// Description:
//    test du syntax de OU 
//
// Resultats:
//   
//
// Historique:
//    cree le 22/01/2022

{
        
    boolean c = (1 < 2 || false) ;

}